feat: learn thread v1